<resources>
    <string name="app_name">תחרויות \n שחייה</string>
    <string name="app_header">תחרויות שחייה</string>
    <string name="log_in_header">תחרויות שחייה</string>
    <string name="log_in_log_in_text">הכנס</string>
    <string name="log_in_register">הרשם</string>
    <string name="register_welcome">ברוך הבא למסך ההרשמה לאפליקציה לתחרויות שחייה</string>
    <string name="register_first_name">שם פרטי</string>
    <string name="register_last_name">שם משפחה</string>
    <string name="register_email">אימייל</string>
    <string name="register_password">סיסמא</string>
    <string name="register_register_btn">הירשם</string>
    <string name="register_i_am_parent_btn">אני הורה</string>
    <string name="register_i_am_student_btn">אני חניך</string>
    <string name="register_birth_date">בחר תאריך לידה</string>
    <string name="register_password_confirmation">אימות סיסמא</string>
    <string name="register_token">מפתח מוצר</string>
    <string name="register_gender">מין</string>
    <string name="menu_edit_competition_btn">ערוך תחרות קיימת</string>
    <string name="menu_new_competition_btn">קבע תחרות חדשה</string>
    <string name="menu_settings_btn">הגדרות</string>
    <string name="menu_img_pics_btn">תמונות וסרטונים</string>
    <string name="menu_statistics_btn">סטטיסטיקות</string>
    <string name="menu_realtime_view_btn">צפייה בזמן אמת</string>
    <string name="menu_view_competitions_btn">תחרויות</string>
    <string name="menu_personal_results_btn">תוצאות אישיות</string>
    <string name="competition_name">שם התחרות</string>
    <string name="set_date">קבע תאריך</string>
    <string name="add_iterations">הוסף תחרות</string>
    <string name="iteration_list">רשימת המקצים</string>
    <string name="date_of_competition">תאריך</string>
    <string name="add_new_competition">הוסף תחרות חדשה</string>
    <string name="add_competition_text_btn">הוסף תחרות</string>
    <string name="list_of_competitions_txt">רשימת תחרויות</string>
    <string name="iteration_length_text">אורך המקצים</string>
    <string name="num_of_participants">מספר משתתפים לכל מקצה</string>
    <string name="take_place_in_date">מתקיימת ב:</string>
    <string name="in_time">בשעה:</string>
    <string name="time_of_competition">שעה</string>
    <string name="pick_age_range">בחר טווח גילאים</string>
    <string name="from">מ -</string>
    <string name="to">עד -</string>
    <string name="take_place_on_date">מתקיימת בתאריך:</string>
    <string name="distance_and_style">מרחק וסגנון שחייה:</string>
    <string name="meters">מטרים,</string>
    <string name="ages">גילאים:</string>
    <string name="participants_for_iteration">מספר משתתפים בכל מקצה:</string>
    <string name="register">הרשם לתחרות</string>
    <string name="start_competition">התחל תחרות</string>
    <string name="reset_stopper">איפוס</string>
    <string name="start_timer">התחל</string>
    <string name="end_iteration">סיים מקצה</string>
    <string name="timer_reset_time">00:00:00</string>
    <string name="register_temp_user_btn">רשום מתחרה זמני</string>
    <string name="first_place">מקום ראשון</string>
    <string name="choose_competition_to_view_results">בחר תחרות לצפיה בתוצאות</string>
    <string name="competition_results_header">תוצאות</string>
    <string name="my_children">הילדים שלי</string>
    <string name="my_personal_information">הפרטים שלי</string>
    <string name="messages">הודעות</string>
    <string name="competitions_menu_btn">תחרויות</string>
    <string name="settings_menu_btn">הגדרות</string>
    <string name="view_results_menu_btn">צפה בתוצאות</string>
    <string name="swimming_competitions_txt">תחרויות שחייה</string>
    <string name="add_temporary_user">מתחרה זמני</string>
    <string name="add_new_user">מתחרה חדש</string>
    <string name="my_children_header">הילדים שלי</string>
    <string name="mobile_phone_number">מספר טלפון נייד</string>
    <string name="google_sign_in">כניסה באמצעות גוגל</string>
    <string name="log_out">התנתק</string>
    <string name="save_details">שמור פרטים</string>
    <string name="birth_date_txt">תאריך לידה:</string>
    <string name="name_txt">שם:</string>
    <string name="add_new_child">הוסף ילד לחשבון שלי</string>
    <string name="add_child_to_your_account">הוסף ילד לחשבונך</string>
    <string name="confirm">אישור</string>
    <string name="forgot_password_txt">שכחתי סיסמא</string>
    <string name="password_reset_header">איפוס סיסמא</string>
    <string name="back_to_home_btn">חזרה למסך הבית</string>
    <string name="register_user">רשום מתחרה אחר</string>
    <string name="ages_sort_text">מיון לפי גיל</string>
    <string name="style_sort_text">מיון לפי סגנון</string>
    <string name="date_sort_text">מיון לפי תאריך</string>
    <string name="name_sort_text">מיון לפי שם</string>
    <string name="register_existing_user">מתחרה קיים</string>
    <string name="search_by_email_and_birth_date">חפש לפי אימייל ותאריך לידה</string>
    <string name="media_nav_item">תמונות משותפות</string>
    <string name="choose_style_and_length">בחר סגנון ומרחק</string>
    <string name="the_chosen_competitions">התחרויות שנבחרו</string>
    <string name="score">תוצאה:</string>
    <string name="seconds">שניות</string>
    <string name="took_place_in_date">התקיימה ב:</string>
    <string name="media_item">mediaItem</string>
    <string name="change_email">שנה אימייל</string>
    <string name="pause">||</string>
    <string name="change_password">שנה סיסמא</string>
    <string name="new_password">סיסמא חדשה</string>
    <string name="new_email">אימייל חדש</string>
    <string name="confirmation_email">אימות אימייל</string>
    <string name="style">סגנון:</string>
    <string name="lengths_of_iterations">, אורך המקצים:</string>
    <string name="user_guide">המדריך למשתמש</string>
    <string name="title_activity_view_statistics">ViewStatisticsActivity</string>
    <string name="add_participants">הוסף מתחרים</string>
    <string name="age">גיל - </string>
</resources>
