<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/competitions_nav_item"
            android:icon="@drawable/ic_swimming"
            android:title="@string/competitions_menu_btn" />

        <item
            android:id="@+id/personal_results_nav_item"
            android:icon="@drawable/ic_ranking"
            android:title="@string/menu_personal_results_btn" />

        <item
            android:id="@+id/statistics_nav_item"
            android:icon="@drawable/ic_analytics"
            android:title="@string/menu_statistics_btn" />

        <item
            android:id="@+id/real_time_nav_item"
            android:icon="@drawable/ic_live"
            android:title="@string/menu_realtime_view_btn" />


        <item android:title="@string/settings_menu_btn"
            android:icon="@drawable/ic_settings">

            <menu>
                <item
                    android:id="@+id/my_personal_info_nav_item"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/my_personal_information"/>

                <item
                    android:id="@+id/my_children_nav_item"
                    android:icon="@drawable/ic_children"
                    android:title="@string/my_children" />
            </menu>

        </item>

        <item
            android:id="@+id/log_out_nav_item"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />

    </group>
</menu>