<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/competitions_nav_item"
            android:icon="@drawable/ic_swimming"
            android:title="@string/competitions_menu_btn" />

        <item
            android:id="@+id/real_time_nav_item"
            android:icon="@drawable/ic_live"
            android:title="@string/menu_realtime_view_btn" />

        <item
            android:id="@+id/personal_results_nav_item"
            android:icon="@drawable/ic_ranking"
            android:title="@string/menu_personal_results_btn" />

        <item
            android:id="@+id/media_nav_item"
            android:icon="@drawable/ic_projector"
            android:title="@string/media_nav_item" />

        <item
            android:id="@+id/settings_nav_item"
            android:title="@string/settings_menu_btn"
            android:icon="@drawable/ic_settings" />

    </group>

    <item
        android:id="@+id/log_out_nav_item"
        android:icon="@drawable/ic_logout"
        android:title="@string/log_out" />

</menu>