<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abstract_swimming_pool"
    android:padding="15dp"
    tools:context="com.app.swimmingcompetitions.swimmingcompetitions.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/register_first_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:hint="@string/register_first_name"
                android:inputType="textPersonName"
                android:textSize="24sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/register_last_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:hint="@string/register_last_name"
                android:inputType="textPersonName"
                android:textSize="24sp" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/register_birth_date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/register_birth_date"
                android:onClick="setDate"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/birth_date_view"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/date_of_competition"
                android:textSize="24sp" />

        </LinearLayout>

        <Spinner
            android:id="@+id/register_gender"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/register_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/register_password_confirmation"
            android:inputType="numberPassword"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/register_token"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/register_token"
            android:inputType="textPersonName"
            android:textSize="22sp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="25dp"
            android:onClick="createFirebaseUser"
            android:text="@string/confirm"
            android:textAlignment="center"
            android:textSize="25sp"
            android:theme="@style/AppTheme.TransparentButton" />

    </LinearLayout>
</ScrollView>
