<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abstract_swimming_pool"
    android:fitsSystemWindows="true"
    android:padding="15dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layoutDirection="rtl"
    tools:context="com.app.swimmingcompetitions.swimmingcompetitions.ChangePasswordActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/register_temp_user_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/register_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/register_password_confirmation"
        android:inputType="numberPassword"
        android:textSize="22sp" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="25dp"
        android:onClick="changePassword"
        android:text="@string/confirm"
        android:textAlignment="center"
        android:textSize="25sp"
        android:theme="@style/AppTheme.TransparentButton" />

</LinearLayout>