<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:padding="15dp"
    android:background="@drawable/abstract_swimming_pool"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".AddChildToParentActivity">

    <TextView
        android:id="@+id/add_child_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/add_child_to_your_account"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/child_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:gravity="center_horizontal"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/child_birth_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/register_birth_date"
            android:onClick="setDate"
            android:gravity="center_horizontal"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/birth_date_view"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textSize="24sp" />


    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="25dp"
        android:onClick="addChildToParent"
        android:text="@string/confirm"
        android:textAlignment="center"
        android:theme="@style/AppTheme.TransparentButton" />



</LinearLayout>