<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/waterpool_bottom"
    android:orientation="vertical"
    android:padding="15sp"
    tools:context="com.app.swimmingcompetitions.swimmingcompetitions.LogInActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:text="@string/log_in_header"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/app_logo_img"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10sp"
        android:contentDescription="@string/hello_world"
        app:srcCompat="@drawable/front_page_img" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp">

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textSize="25sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textSize="25sp" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/email_create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:width="130sp"
            android:onClick="firebaseLogIn"
            android:text="@string/log_in_log_in_text"
            android:textSize="25sp"
            android:theme="@style/ThemeOverlay.TransparentButton" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:width="130sp"
            android:onClick="switchToPreRegisterActivity"
            android:text="@string/log_in_register"
            android:textSize="25sp"
            android:theme="@style/ThemeOverlay.TransparentButton" />


    </RelativeLayout>

</LinearLayout>

