<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layoutDirection="rtl"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/abstract_swimming_pool"
    tools:context="com.app.swimmingcompetitions.swimmingcompetitions.HomePageActivity">

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"/>

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/nav_color"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_margin="15sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/competitions_btn"
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:onClick="openViewCompetitionsActivity"
                    android:text="@string/menu_view_competitions_btn"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:theme="@style/AppTheme.TransparentButton" />

                <Button
                    android:id="@+id/personal_results_btn"
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/menu_personal_results_btn"
                    android:onClick="openViewResultsActivity"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:theme="@style/AppTheme.TransparentButton" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_margin="15sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/real_time_btn"
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/menu_realtime_view_btn"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:theme="@style/AppTheme.TransparentButton" />

                <Button
                    android:id="@+id/statistics_btn"
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:onClick="openViewCompetitionsActivity"
                    android:text="@string/menu_statistics_btn"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:theme="@style/AppTheme.TransparentButton" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_margin="15sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/img_pics_btn"
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/menu_img_pics_btn"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:theme="@style/AppTheme.TransparentButton" />

                <Button
                    android:id="@+id/settings_btn"
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:onClick="openMySettingsActivity"
                    android:text="@string/menu_settings_btn"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:theme="@style/AppTheme.TransparentButton" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_margin="15sp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/log_out"
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:onClick="logOut"
                    android:text="@string/log_out"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:theme="@style/AppTheme.TransparentButton" />

            </RelativeLayout>

        </LinearLayout>



    </FrameLayout>




</android.support.v4.widget.DrawerLayout>
